--- a/QtTcpClientProducer/mainwindow.ui
+++ b/QtTcpClientProducer/mainwindow.ui
@@ -14,55 +14,90 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>1</x>
+      <y>331</y>
+      <width>47</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Status:</string>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowser">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>-10</y>
+      <width>261</width>
+      <height>411</height>
+     </rect>
+    </property>
+   </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>3</x>
+      <x>0</x>
       <y>0</y>
-      <width>611</width>
-      <height>391</height>
+      <width>361</width>
+      <height>81</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="0" colspan="2">
+     <item row="0" column="1">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Endereço IP</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0" colspan="3">
+      <widget class="QLineEdit" name="lineEditIP"/>
+     </item>
+     <item row="2" column="2">
+      <widget class="QPushButton" name="pushButtonDisconnect">
+       <property name="text">
+        <string>Disconnect</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0" colspan="2">
       <widget class="QPushButton" name="pushButtonConnect">
        <property name="text">
         <string>Connect</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="1" colspan="2">
-      <widget class="QSlider" name="horizontalSliderMax">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
+    </layout>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>1</x>
+      <y>101</y>
+      <width>361</width>
+      <height>151</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="1" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>Max</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_2">
+     <item row="2" column="0" colspan="2">
+      <widget class="QLabel" name="label">
        <property name="text">
-        <string>Min</string>
+        <string>Timing(s)</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="4">
-      <widget class="QLCDNumber" name="lcdNumberMin"/>
-     </item>
-     <item row="0" column="6" rowspan="6">
-      <widget class="QScrollBar" name="verticalScrollBar">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="2" colspan="2">
+     <item row="2" column="2">
       <widget class="QSlider" name="horizontalSliderTime">
        <property name="minimum">
         <number>1</number>
@@ -75,54 +110,76 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="3" colspan="2">
-      <widget class="QPushButton" name="pushButtonDisconnect">
-       <property name="text">
-        <string>Disconnect</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="4">
-      <widget class="QLCDNumber" name="lcdNumberMax"/>
-     </item>
-     <item row="5" column="3" colspan="2">
-      <widget class="QPushButton" name="pushButtonStop">
-       <property name="text">
-        <string>Stop</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="5" rowspan="6">
-      <widget class="QTextBrowser" name="textBrowser"/>
-     </item>
-     <item row="4" column="4">
-      <widget class="QLCDNumber" name="lcdNumberTime"/>
-     </item>
-     <item row="5" column="0" colspan="2">
-      <widget class="QPushButton" name="pushButtonStart">
-       <property name="text">
-        <string>Start</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1" colspan="2">
+     <item row="0" column="1" colspan="2">
       <widget class="QSlider" name="horizontalSliderMin">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="4" column="0" colspan="2">
-      <widget class="QLabel" name="label">
+     <item row="1" column="3">
+      <widget class="QLCDNumber" name="lcdNumberMax"/>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Timing(s)</string>
+        <string>Min</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="0" colspan="3">
-      <widget class="QLineEdit" name="lineEditIP"/>
+     <item row="2" column="3">
+      <widget class="QLCDNumber" name="lcdNumberTime"/>
+     </item>
+     <item row="0" column="3">
+      <widget class="QLCDNumber" name="lcdNumberMin"/>
+     </item>
+     <item row="1" column="1" colspan="2">
+      <widget class="QSlider" name="horizontalSliderMax">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>260</y>
+      <width>361</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="pushButtonStart">
+       <property name="text">
+        <string>Start</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButtonStop">
+       <property name="text">
+        <string>Stop</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QLabel" name="labelStatus">
+    <property name="geometry">
+     <rect>
+      <x>54</x>
+      <y>331</y>
+      <width>111</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Desconectado</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
