--- a/QtTcpClientProducer/mainwindow.ui
+++ b/QtTcpClientProducer/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>635</width>
-    <height>477</height>
+    <width>639</width>
+    <height>473</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -43,19 +43,23 @@
       <x>0</x>
       <y>0</y>
       <width>361</width>
-      <height>81</height>
+      <height>89</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
+     <item row="1" column="0" colspan="3">
+      <widget class="QLineEdit" name="lineEditIP">
+       <property name="text">
+        <string>127.0.0.1</string>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="1">
       <widget class="QLabel" name="label_4">
        <property name="text">
         <string>IP do servidor</string>
        </property>
       </widget>
-     </item>
-     <item row="1" column="0" colspan="3">
-      <widget class="QLineEdit" name="lineEditIP"/>
      </item>
      <item row="2" column="2">
       <widget class="QPushButton" name="pushButtonDisconnect">
@@ -128,7 +132,11 @@
       </widget>
      </item>
      <item row="2" column="3">
-      <widget class="QLCDNumber" name="lcdNumberTime"/>
+      <widget class="QLCDNumber" name="lcdNumberTime">
+       <property name="intValue" stdset="0">
+        <number>1</number>
+       </property>
+      </widget>
      </item>
      <item row="0" column="3">
       <widget class="QLCDNumber" name="lcdNumberMin"/>
@@ -187,7 +195,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>635</width>
+     <width>639</width>
      <height>22</height>
     </rect>
    </property>
